--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
 <body>
   <h1><a href="index.html">우리 가족</a></h1>
   <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>을 소개합니다. <p>이 웹을 통해서 말이죠.</p>
-  <img src="web1/coding.jpg" width="500">
+  <img src="coding.jpg" width="500">
   <p>먼저 우리 가족 구성은 아빠,엄마,나,여동생,남동생입니다.</p>
   <ol>
     <li><a href="1.html">아빠</a></li>
