--- a/6.html
+++ b/6.html
@@ -18,7 +18,7 @@
     <li><a href="4.html">여동생</a></li>
     <li><a href="5.html">남동생</a></li>
   </ol>
-  <h2>김진숙</h2>
-  <img src="image2.jpg" width="500">
-  <p>누가 뭐라해도 내편이고 최고의 친구이면서 최고의 엄마, 항상 고맙고 미안하고 사랑하는 우리엄마</p>
+  <h2>이석란</h2>
+  <img src="image6.jpg" width="500">
+  <p>세상에서 제일 사랑하고 항상 보고싶은 우리 할머니</p>
 </body>
