--- a/1.html
+++ b/1.html
@@ -6,16 +6,19 @@
 </head>
 <body>
   <h1><a href="index.html">우리 가족</a></h1>
-  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>을 소개합니다. <p>이 웹을 통해서 말이죠.</p>
+  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>입니다.
+  <p>이 웹은 우리가족의 웹입니다.</p>
   <img src="coding.jpg" width="500">
-  <p>먼저 우리 가족 구성은 아빠,엄마,나,여동생,남동생입니다.</p>
+  <p>가족구성원은 할머니,아빠,엄마,나,여동생,남동생입니다.</p>
   <ol>
+    <li><a href="6.html">할머니</a></li>
     <li><a href="1.html">아빠</a></li>
     <li><a href="2.html">엄마</a></li>
     <li><a href="3.html">나</a></li>
     <li><a href="4.html">여동생</a></li>
     <li><a href="5.html">남동생</a></li>
   </ol>
-  <h2>아빠</h2>
-  <p>아빠는 아버지를 친근하게 부르는 말이다.또는 격식을 갖추지 않아도 되는 상황에서, ‘아버지’를 이르거나 부르는 말.</p>
+  <h2>이종찬</h2>
+  <img src="image1.jpg" width="500">
+  <p>옛날에는 뭐가 그렇게 어렵고 무서웠는지 모르겠지만 지금은 누구보다 나의 고민을 털어놓고 얘기할 수 있는 최고의 아빠</p>
 </body>
