--- a/3.html
+++ b/3.html
@@ -6,16 +6,21 @@
 </head>
 <body>
   <h1><a href="index.html">우리 가족</a></h1>
-  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>을 소개합니다. <p>이 웹을 통해서 말이죠.</p>
+  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>입니다.
+  <p>이 웹은 우리가족의 웹입니다.</p>
   <img src="coding.jpg" width="500">
-  <p>먼저 우리 가족 구성은 아빠,엄마,나,여동생,남동생입니다.</p>
+  <p>가족구성원은 할머니,아빠,엄마,나,여동생,남동생입니다.</p>
   <ol>
+    <li><a href="6.html">할머니</a></li>
     <li><a href="1.html">아빠</a></li>
     <li><a href="2.html">엄마</a></li>
     <li><a href="3.html">나</a></li>
     <li><a href="4.html">여동생</a></li>
     <li><a href="5.html">남동생</a></li>
   </ol>
-  <h2>나</h2>
-  <p>나는 나다. 왜냐하면 나이기 때문이다.</p>
+  <h2>이승준</h2>
+  <img src="image3.jpg" width="500">
+  <p>나는 나를 잘 모르겠지만, 주위 사람들을 보면 난 하나님의 복이 많은 사람인것 같다. 정말 서로를 위하고 아끼는 가족이 있고, 자주 못보고 항상 약속을 못지켜도 좋아해주는
+    여자친구도 있으며, 휴가때 연락을 안해도 연락와서 만나주는 친구들이 있어서 정말 고맙고 감사하다. 코딩공부를 통해서 내가 하고싶은걸 한 번 찾아보려고하는데
+    빨리는 못해도 천천히 하나씩 배우면서 나가려고한다.</p>
 </body>
