--- a/4.html
+++ b/4.html
@@ -6,16 +6,19 @@
 </head>
 <body>
   <h1><a href="index.html">우리 가족</a></h1>
-  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>을 소개합니다. <p>이 웹을 통해서 말이죠.</p>
+  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>입니다.
+  <p>이 웹은 우리가족의 웹입니다.</p>
   <img src="coding.jpg" width="500">
-  <p>먼저 우리 가족 구성은 아빠,엄마,나,여동생,남동생입니다.</p>
+  <p>가족구성원은 할머니,아빠,엄마,나,여동생,남동생입니다.</p>
   <ol>
+    <li><a href="6.html">할머니</a></li>
     <li><a href="1.html">아빠</a></li>
     <li><a href="2.html">엄마</a></li>
     <li><a href="3.html">나</a></li>
     <li><a href="4.html">여동생</a></li>
     <li><a href="5.html">남동생</a></li>
   </ol>
-  <h2>여동생</h2>
-  <p>통상적으로 여자인 동생을 가리킬 때 오빠가 여동생이라고 하고 언니는 그냥 동생이라고 하는 경향이 강하다.</p>
+  <h2>이예지</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/1uhVHRqF3Pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p>어릴때는 그렇게 마음에 안들었지만 지금은 누구보다 편한 친구같은 여동생</p>
 </body>
