--- a/5.html
+++ b/5.html
@@ -6,16 +6,19 @@
 </head>
 <body>
   <h1><a href="index.html">우리 가족</a></h1>
-  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>을 소개합니다. <p>이 웹을 통해서 말이죠.</p>
+  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>입니다.
+  <p>이 웹은 우리가족의 웹입니다.</p>
   <img src="coding.jpg" width="500">
-  <p>먼저 우리 가족 구성은 아빠,엄마,나,여동생,남동생입니다.</p>
+  <p>가족구성원은 할머니,아빠,엄마,나,여동생,남동생입니다.</p>
   <ol>
+    <li><a href="6.html">할머니</a></li>
     <li><a href="1.html">아빠</a></li>
     <li><a href="2.html">엄마</a></li>
     <li><a href="3.html">나</a></li>
     <li><a href="4.html">여동생</a></li>
     <li><a href="5.html">남동생</a></li>
   </ol>
-  <h2>남동생</h2>
-  <p>통상적으로 남자인 동생을 가리킬 때 누나가 남동생이라 하고 형은 그냥 동생이라고 하는 경향이 강하다.</p>
+  <h2>이승민</h2>
+  <img src="image5.jpg" width="500">
+  <p>어릴때는 귀엽다가 크면서 패고싶다가 지금은 그래도 자기가 좋아하는것에 열중하는 모습이 부럽고 대견한 남동생</p>
 </body>
