--- a/index.html
+++ b/index.html
@@ -6,14 +6,37 @@
 </head>
 <body>
   <h1><a href="index.html">우리 가족</a></h1>
-  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>을 소개합니다. <p>이 웹을 통해서 말이죠.</p>
+  <strong>저의 <a href="https://ko.wikipedia.org/wiki/%EA%B0%80%EC%A1%B1" target="_blank" title="html5">가족</a></strong>입니다.
+  <p>이 웹은 우리가족의 웹입니다.</p>
   <img src="coding.jpg" width="500">
-  <p>먼저 우리 가족 구성은 아빠,엄마,나,여동생,남동생입니다.</p>
+  <p>가족구성원은 할머니,아빠,엄마,나,여동생,남동생입니다.</p>
   <ol>
+    <li><a href="6.html">할머니</a></li>
     <li><a href="1.html">아빠</a></li>
     <li><a href="2.html">엄마</a></li>
     <li><a href="3.html">나</a></li>
     <li><a href="4.html">여동생</a></li>
     <li><a href="5.html">남동생</a></li>
   </ol>
+  <p>
+    <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://html-ysogt2dxrr.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript></p>
 </body>
