--- a/3.html
+++ b/3.html
@@ -23,4 +23,39 @@
   <p>나는 나를 잘 모르겠지만, 주위 사람들을 보면 난 하나님의 복이 많은 사람인것 같다. 정말 서로를 위하고 아끼는 가족이 있고, 자주 못보고 항상 약속을 못지켜도 좋아해주는
     여자친구도 있으며, 휴가때 연락을 안해도 연락와서 만나주는 친구들이 있어서 정말 고맙고 감사하다. 코딩공부를 통해서 내가 하고싶은걸 한 번 찾아보려고하는데
     빨리는 못해도 천천히 하나씩 배우면서 나가려고한다.</p>
+    <p>
+      <div id="disqus_thread"></div>
+      <script>
+
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://html-ysogt2dxrr.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.
+    </a></noscript></p>
+    <p><!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5f3e7cd11e7ade5df44284ea/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script--></p>
 </body>
